# probable-guacamole

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
models/: model.h5
ops_test.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: model.py  predict.py  utils.py
tests/: test_model.py
